
The rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - don't reproduce every subversion log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting

------------------------------------------------------------------------------
??/??/15  tyler.je.reddy, richardjgowers, alejob, orbeckst

  * 0.11.0

  Enhancements
  * Added reading of DL_Poly format CONFIG and HISTORY files (Issue #298)
    These can both act as both Topology and Coordinate information
  * Timestep objects now have __eq__ method
  * coordinates.base.Timestep now can handle velocities and forces
  * Waterdynamics analysis module added, including five analysis classes: Hydrogen Bond
    Lifetimes, Water Orientational Relaxation, Angular Distribution, Mean Square 
    Displacement and Survival Probability. Documentation and test are included.

  Changes
  * Timestep can now only init using an integer argument (which
    represents the number of atoms)
  * Added from_timestep and from_coordinates construction methods
    to base.Timestep
  * Removed FormatError, now replaced by ValueError
  * distances.contact_matrix(): changed keyword 'suppress_progmet' to
    'quiet'

  Fixes
  * analysis.hbonds.HydrogenBondAnalysis performs a sanity check for
    static selections (Issue #296)
  * Fixed TRZWriter failing when passed a non TRZTimestep (Issue #302)
  * relative imports are now banned in unit testing modules
    (Issue #189)


06/01/15  richardjgowers, caio s. souza, manuel.nuno.melo, orbeckst, 
          sseyler
  * 0.10.0

  Enhancements

  * Improved performance of PDB Reading.  Up to 3x faster. (Issue #212)
  * Added the 'same ... as' selection keyword (Issue #217)
  * Added guess_bonds keyword argument to Universe creation.  This will attempt to
    guess all topology information on Universe creation. (Issue #245)