@@ -10,7 +10,7 @@ The rules for this file:
     use tabs but use spaces for formatting
 
 ------------------------------------------------------------------------------
-??/??/15  tyler.je.reddy, richardjgowers, alejob, orbeckst
+??/??/15  tyler.je.reddy, richardjgowers, alejob, orbeckst, dotsdl
 
   * 0.11.0
 
@@ -22,6 +22,7 @@ The rules for this file:
   * Waterdynamics analysis module added, including five analysis classes: Hydrogen Bond
     Lifetimes, Water Orientational Relaxation, Angular Distribution, Mean Square 
     Displacement and Survival Probability. Documentation and test are included.
+  * RMSF class added to rms analysis module
 
   Changes
   * Timestep can now only init using an integer argument (which
